implementing tickers file status uploading